이미지 표시

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <%-include('header.ejs')%> 
     
 
-    홈페이지에 오신걸 환영합니다. 
-    
+    홈페이지에 오신걸 환영합니다.
 
-<%-include('footer.ejs')%>     
+    <img src="/ani.jpg">
+    <img src="/img/kajuya.jpg">
+
+<%-include(`footer.ejs`)%>
