--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,8 @@
             <a href="/profile">프로필</a>
             <a href="/map">찾아오시는길</a>
             <a href="/contact">문의하기</a>
+            <a href="/contactList">문의내용들</a>
+            <a href="/login">로그인</a>
 
         </nav>
     </header>
