회원가입만들기

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,9 @@
          <li> 비밀번호 : <input type="password" name="pw" required></li>
 
         <button>로그인</button>
+        
+        <button onclick="window.location.href='/signup'">회원가입</button>
+        
     </ul>
 </form>
 
